[gd_scene load_steps=5 format=3 uid="uid://deh2lx5iwff3m"]

[ext_resource type="Texture2D" uid="uid://xj1o75kq3pxd" path="res://assets/Neuronautas.png" id="1_8vc0c"]
[ext_resource type="Script" path="res://scripts/memory_menu.gd" id="1_q47on"]
[ext_resource type="FontFile" uid="uid://db5j82d65e1uw" path="res://assets/fonts/ComingSoon-Regular.ttf" id="2_kg3fq"]
[ext_resource type="Texture2D" uid="uid://byrpuwgqsity2" path="res://assets/Personagem.png" id="3_qp18m"]

[node name="memory_menu" type="Node2D"]
script = ExtResource("1_q47on")

[node name="Neuronautas" type="Sprite2D" parent="."]
position = Vector2(200, 300)
texture = ExtResource("1_8vc0c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
offset_left = 40.0
offset_top = 80.0
offset_right = 360.0
offset_bottom = 600.0
theme_override_constants/separation = 10
alignment = 1

[node name="EButton" type="Button" parent="VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kg3fq")
text = "Fácil"

[node name="MButton" type="Button" parent="VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kg3fq")
text = "Médio"

[node name="HButton" type="Button" parent="VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kg3fq")
text = "Díficil"

[node name="BackButton" type="Button" parent="VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kg3fq")
text = "Voltar para o menu"

[node name="Personagem" type="Sprite2D" parent="."]
position = Vector2(48, 160)
scale = Vector2(0.101563, 0.101563)
texture = ExtResource("3_qp18m")

[connection signal="pressed" from="VBoxContainer/EButton" to="." method="_on_memoryE_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MButton" to="." method="_on_memoryM_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HButton" to="." method="_on_memoryH_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
